# webtest

./: Cargo.toml  README.md
source/backend/: .env  Cargo.toml
source/backend/src/: envs.rs  main.rs
source/backend/src/db/: mod.rs
source/backend/src/db_interface/: courses.rs  lectures.rs  mod.rs  users.rs
source/backend/src/entities/: course.rs  lecture.rs  mod.rs  user.rs
source/backend/src/errors/: mod.rs
source/backend/src/response/: mod.rs
source/backend/src/router/: auth.rs  course.rs  lecture.rs  mod.rs
source/frontend/: package-lock.json
source/frontend/src/: App.tsx
source/frontend/src/pages/: activityStreamPage.tsx  homePage.tsx  lecturePage.tsx  professorPage.tsx  signinPage.tsx  signupPage.tsx  studentPage.tsx
